--- a/src/app/componentes/filtragem-lista-importacao/filtragem-lista-importacao.component.html
+++ b/src/app/componentes/filtragem-lista-importacao/filtragem-lista-importacao.component.html
@@ -1,1 +1,7 @@
-<p>filtragem-lista-importacao works!</p>
+<div class="flex gap-5">
+  <input hlmInput name='nome' placeholder='Nome da importação' #filtroInput/>
+  <button hlmBtn variant="link" (click)="filtrar(filtroInput.value)">
+    <hlm-icon size="sm" class="mr-2" name="lucideSearch"/>
+    Pesquisar
+  </button>
+</div>
